build/log/idf_py_stderr_output_50395
Command: make -j 14 all
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c: In function 'mqtt_event_handler':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c:28:29: warning: unused variable 'event' [-Wunused-variable]
   28 |     esp_mqtt_event_handle_t event = event_data;
      |                             ^~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/per_intr.c:81:23: warning: 'disp_isr_handler' defined but not used [-Wunused-function]
   81 | static void IRAM_ATTR disp_isr_handler(void *arg)
      |                       ^~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'time_sync_and_start_mqtt_task':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:442:9: error: implicit declaration of function 'initialize_sntp' [-Wimplicit-function-declaration]
  442 |         initialize_sntp();
      |         ^~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:445:9: error: implicit declaration of function 'wait_for_time_sync' [-Wimplicit-function-declaration]
  445 |         wait_for_time_sync();
      |         ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:455:17: warning: conflicting types for 'initialize_sntp'; have 'void(void)'
  455 |     static void initialize_sntp(void)
      |                 ^~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:455:17: error: static declaration of 'initialize_sntp' follows non-static declaration
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:442:9: note: previous implicit declaration of 'initialize_sntp' with type 'void(void)'
  442 |         initialize_sntp();
      |         ^~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'initialize_sntp':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:461:9: warning: 'sntp_setoperatingmode' is deprecated: use esp_sntp_setoperatingmode() instead [-Wdeprecated-declarations]
  461 |         sntp_setoperatingmode(SNTP_OPMODE_POLL);
      |         ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:34,
                 from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:16:
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:249:6: note: declared here
  249 | void sntp_setoperatingmode(u8_t operating_mode)
      |      ^~~~~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:462:9: warning: 'sntp_setservername' is deprecated: use esp_sntp_setservername() instead [-Wdeprecated-declarations]
  462 |         sntp_setservername(0, "pool.ntp.org");
      |         ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:263:6: note: declared here
  263 | void sntp_setservername(u8_t idx, const char *server)
      |      ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:463:9: warning: 'sntp_init' is deprecated: use esp_sntp_init() instead [-Wdeprecated-declarations]
  463 |         sntp_init();
      |         ^~~~~~~~~
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:269:6: note: declared here
  269 | void sntp_init(void)
      |      ^~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:468:17: warning: conflicting types for 'wait_for_time_sync'; have 'void(void)'
  468 |     static void wait_for_time_sync(void)
      |                 ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:468:17: error: static declaration of 'wait_for_time_sync' follows non-static declaration
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:445:9: note: previous implicit declaration of 'wait_for_time_sync' with type 'void(void)'
  445 |         wait_for_time_sync();
      |         ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:468:17: warning: 'wait_for_time_sync' defined but not used [-Wunused-function]
  468 |     static void wait_for_time_sync(void)
      |                 ^~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:141: esp-idf/main/CMakeFiles/__idf_main.dir/network/wifi_config.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
